src/test/rustdoc-ui/ice.stderr
error: expected one of `!` or `::`, found `<eof>`
  --> $DIR/ice.rs:4:1
   |
LL | fail
   | ^^^^ expected one of `!` or `::` here

thread 'rustc' panicked at 'aborting due to `-Z treat-err-as-bug=1`', src/librustc_errors/lib.rs:546:13
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace.

error: internal compiler error: unexpected panic

error: Unrecognized option: 'document-private-items'

